--- a/estilo.css
+++ b/estilo.css
@@ -45,6 +45,10 @@ body {
 .logo {
    align-items: center;
    inline-size: auto;
+   display:  inline-table;
+   width: 20px;
+   
+   
 }
 
 
@@ -66,4 +70,9 @@ animation: animated 5s linear infinite;
 
 .Localização {
     text-align: center;
+}
+
+
+.imagens {
+    display: inline-block;
 }
